--- a/src/app/components/Auth/login/login.component.html
+++ b/src/app/components/Auth/login/login.component.html
@@ -5,16 +5,15 @@
             <div class="row">
                 <div class="col-lg-4 col-sm-6 mr-auto ml-auto">
                     <div class="card card-register">
-                        <h3 class="title" style="margin-top: 10px; font-weight: bold;color: white;">Welcome</h3>
-                        <div class="row" *ngIf="errorsList.length>0">
+                        <h3 class="title" style="margin-top: 10px;font-weight: bold;color: white;">Login</h3>
+                        <div class="row" *ngIf="errorMessage" style="height: 50px;">
                             <div class="col-md-12" style="margin-top: 10px;">
                                 <div class="alert alert-primary"
                                     style="background-color: white;color: red;font-weight: bold;"
-                                    *ngFor="let error of errorsList;index as i">{{error }}
-                                </div>
+                                    [innerHtml]="errorMessage"></div><br />
                             </div>
                         </div>
-                        <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+                        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                             <label>Email</label>
                             <div class="input-group form-group-no-border"
                                 [ngClass]="{'input-group-focus':focus===true}">
@@ -26,11 +25,11 @@
                                 <input type="text" id="email" class="form-control" placeholder="Email"
                                     (focus)="focus=true" (blur)="focus=false" formControlName="email">
                             </div>
-                            <div *ngIf="isSubmitted && signUpForm.controls.email.errors">
-                                <p *ngIf="signUpForm.controls.email.errors.required"
+                            <div *ngIf="isSubmitted && loginForm.controls.email.errors">
+                                <p *ngIf="loginForm.controls.email.errors.required"
                                     style="text-align: right;color:black;">Required</p>
-                                <p *ngIf="signUpForm.controls.email.errors.email"
-                                    style="text-align: right;color:black;">Should be a valid Email</p>
+                                <p *ngIf="loginForm.controls.email.errors.email" style="text-align: right;color:black;">
+                                    Should be a valid Email</p>
                             </div>
 
                             <label>Password</label>
@@ -44,34 +43,15 @@
                                 <input type="password" class="form-control" placeholder="Password" (focus)="focus1=true"
                                     (blur)="focus1=false" formControlName="password">
                             </div>
-                            <div *ngIf="isSubmitted && signUpForm.controls.password.errors">
-                                <p *ngIf="signUpForm.controls.password.errors.required"
+                            <div *ngIf="isSubmitted && loginForm.controls.password.errors">
+                                <p *ngIf="loginForm.controls.password.errors.required"
                                     style="text-align: right;color:black;">Required</p>
                             </div>
-
-                            <label>Confirm Password</label>
-                            <div class="input-group form-group-no-border"
-                                [ngClass]="{'input-group-focus':focus1===true}">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text">
-                                        <i class="nc-icon nc-key-25"></i>
-                                    </span>
-                                </div>
-                                <input type="password" class="form-control" placeholder="Confirm Password"
-                                    (focus)="focus1=true" (blur)="focus1=false" formControlName="confirmPassword">
-                            </div>
-                            <div *ngIf="isSubmitted && signUpForm.controls.confirmPassword.errors">
-                                <p *ngIf="signUpForm.controls.confirmPassword.errors.required"
-                                    style="text-align: right;color:black;">Required</p>
-                            </div>
-                            <p *ngIf="isSubmitted && signUpForm.errors && signUpForm.errors.notSame"
-                                style="text-align: right;color:black;">
-                                Password does not match</p>
                             <button type="submit" class="btn btn-danger btn-block btn-round" replaceText="Processing"
-                                [spinnerButton]="submitting">Register</button>
+                                [spinnerButton]="submitting">Login</button>
                         </form>
                         <div class="forgot">
-                            <a href="/login" class="btn btn-link btn-danger">Login</a><br>
+                            <a href="/signup" class="btn btn-link btn-danger">Register Here</a>
                             <a href="#" style="margin-top: 0;" class="btn btn-link btn-danger">Forgot password?</a>
                         </div>
                     </div>
