--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,8 +1,7 @@
-<nav class="navbar navbar-expand-lg fixed-top" color-on-scroll="500">
+<nav class="navbar navbar-expand-lg fixed-top top" color-on-scroll="500" id="navBarDiv">
     <div class="container">
         <div class="navbar-translate">
-            <!-- <a class="navbar-brand" href="https://www.creative-tim.com">Paper Kit 2 Angular</a> -->
-            <img src="assets/img/logo-big.png" width="200px" class="navbar-brand">
+            <a routerLink="/home"> <img src="assets/img/logo-big.png" width="200px" class="navbar-brand"></a>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse"
                 data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                 aria-label="Toggle navigation" (click)="sidebarToggle()">
@@ -13,50 +12,30 @@
         </div>
         <div class="navbar-collapse" id="navbarToggler">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom"
-                        href="https://twitter.com/CreativeTim" target="_blank">
-                        <i class="fa fa-twitter"></i>
-                        <p class="d-lg-none">Twitter</p>
-                    </a>
+                <li class="nav-item" *ngIf="!isLoggedInUser">
+                    <a routerLink="/login" class="nav-link"> Login</a>
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom"
-                        href="https://www.facebook.com/CreativeTim" target="_blank">
-                        <i class="fa fa-facebook-square"></i>
-                        <p class="d-lg-none">Facebook</p>
-                    </a>
+                <li class="nav-item" *ngIf="!isLoggedInUser">
+                    <a routerLink="/signup" class="nav-link"> Register</a>
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom"
-                        href="https://www.instagram.com/CreativeTimOfficial" target="_blank">
-                        <i class="fa fa-instagram"></i>
-                        <p class="d-lg-none">Instagram</p>
-                    </a>
+                <li class="nav-item" *ngIf="isLoggedInUser">
+                    <a routerLink="/my-shops" class="nav-link">
+                        <i class="nc-icon nc-shop"></i> My Shops</a>
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom"
-                        href="https://www.github.com/CreativeTimOfficial/paper-kit-2-angular" target="_blank">
-                        <i class="fa fa-github"></i>
-                        <p class="d-lg-none">GitHub</p>
-                    </a>
+                <li class="nav-item" *ngIf="isLoggedInUser">
+                    <a routerLink="/my-shops" class="nav-link">
+                        <i class="nc-icon nc-globe"></i> Sell Now</a>
                 </li>
-                <li class="nav-item" *ngIf="!isDocumentation()">
-                    <a href="http://pk2-angular.creative-tim.com/documentation/tutorial" class="nav-link"
-                        target="_blank"><i class="nc-icon nc-book-bookmark"></i> Documentation</a>
-                </li>
-                <li class="nav-item" *ngIf="isHome()">
-                    <a href="https://www.creative-tim.com/product/paper-kit-2-pro-angular?ref=pk2-angular-free-local"
-                        target="_blank" class="btn btn-danger btn-round">Upgrade to Pro</a>
-                </li>
-                <li class="nav-item" *ngIf="!isHome()">
-                    <a [routerLink]="['/home']" *ngIf="!isDocumentation()" class="nav-link"><i
-                            class="nc-icon nc-layout-11"></i>Components</a>
-                    <a [routerLink]="['/home']" *ngIf="isDocumentation()" class="nav-link">Back to Kit</a>
-                </li>
-                <li class="nav-item" *ngIf="isDocumentation()">
-                    <a href="https://github.com/creativetimofficial/paper-kit-2-angular/issues?ref=pk2-free-local"
-                        target="_blank" class="nav-link">Have an issue</a>
+                <li class="nav-item" *ngIf="isLoggedInUser">
+                    <div ngbDropdown class="d-inline-block dropdown">
+                        <a class="nav-link" id="dropdownBasic1" ngbDropdownToggle>
+                            <i class="nc-icon nc-circle-10"></i> My Account
+                        </a>
+                        <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-primary">
+                            <a class="dropdown-item">Update profile</a>
+                            <a class="dropdown-item">Logout</a>
+                        </div>
+                    </div>
                 </li>
             </ul>
         </div>
