--- a/src/app/components/my-shops/my-shops.component.html
+++ b/src/app/components/my-shops/my-shops.component.html
@@ -44,7 +44,7 @@
         <form [formGroup]="createShopForm" (ngSubmit)="onSubmit()">
             <div class="form-group">
                 <label>Name</label>
-                <input type="text" class="form-control" formControlName="name">
+                <input type="text" class="form-control" formControlName="name" id="name">
             </div>
             <div class="form-group" [ngClass]="{'has-danger':isDistrictError}">
                 <label>District</label>
@@ -58,24 +58,35 @@
             </div>
             <div class="form-group" [ngClass]="{'has-danger':isCityError}">
                 <label>Cities</label>
-                <input id="typeahead-focus" type="text" class="form-control" [(ngModel)]="cityName" disabled="{{cities.length==0}}"
-                    [ngModelOptions]="{standalone: true}" (selectItem)="selectedCity($event)"
-                    [ngbTypeahead]="searchCities" (focus)="focusCities$.next($any($event).target.value)"
+                <input id="typeahead-focus" type="text" class="form-control" [(ngModel)]="cityName"
+                    disabled="{{cities.length==0}}" [ngModelOptions]="{standalone: true}"
+                    (selectItem)="selectedCity($event)" [ngbTypeahead]="searchCities"
+                    (focus)="focusCities$.next($any($event).target.value)"
                     (click)="clickCities$.next($any($event).target.value)" #instance="ngbTypeahead"
                     (focusout)="focusOutCities($event)" />
                 <div class="form-control-feedback" *ngIf="isCityError">No city selected. Please select one.</div>
             </div>
             <div class="form-group">
                 <label>Address</label>
-                <input type="text" class="form-control" formControlName="address">
+                <input type="text" class="form-control" formControlName="address" id="address">
             </div>
             <div class="form-group">
                 <label>Phone</label>
-                <input type="text" class="form-control" formControlName="phone">
+                <input type="text" class="form-control" formControlName="phone" id="phone"
+                    placeholder="Enter 10 digits phone number">
             </div>
             <div class="form-group">
                 <label>Website</label>
                 <input type="text" class="form-control" formControlName="website">
+            </div>
+            <div class="form-group">
+                <label>Select location</label>
+                <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="false"
+                    [zoomControl]="true">
+                    <agm-marker [latitude]="lat" [longitude]="lng" [markerDraggable]="true"
+                        (dragEnd)="markerDragEnd($event)">
+                    </agm-marker>
+                </agm-map>
             </div>
         </form>
     </div>
