--- a/src/app/components/my-shops/my-shops.component.html
+++ b/src/app/components/my-shops/my-shops.component.html
@@ -8,7 +8,7 @@
                 <div class="card-normal" style="float:right;padding:0;">
                     <div class="buttons">
                         <button type="button" class="btn btn-outline-success btn-sm" style="width: 100%;"
-                            (click)="openCreateModal(content)">ADD NEW SHOP</button>
+                            #openCreateModalId (click)="openCreateModal(content)">ADD NEW SHOP</button>
                     </div>
                 </div>
             </div>
