--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -23,6 +23,10 @@
                         <i class="nc-icon nc-shop"></i> My Shops</a>
                 </li>
                 <li class="nav-item" *ngIf="isLoggedInUser">
+                    <a routerLink="/my-products" class="nav-link">
+                        <i class="nc-icon nc-tile-56"></i> My Products</a>
+                </li>
+                <li class="nav-item" *ngIf="isLoggedInUser">
                     <a routerLink="/my-shops" class="nav-link">
                         <i class="nc-icon nc-globe"></i> Sell Now</a>
                 </li>
