--- a/src/assets/sass/custom-styles.scss
+++ b/src/assets/sass/custom-styles.scss
@@ -17,7 +17,7 @@ h4,
 }
 .card-normal {
     background-color: #fff;
-    border-radius: 8px;
+    border-radius: 0.2rem !important;
     color: #000;
     border: 1px solid #eee;
     padding: 20px;
