--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top top" color-on-scroll="500" id="navBarDiv">
     <div class="container">
         <div class="navbar-translate">
-            <a routerLink="/home"> <img src="assets/img/logo-big.png" width="200px" class="navbar-brand"></a>
+            <a routerLink="/"> <img src="assets/img/logo-big.png" width="200px" class="navbar-brand"></a>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse"
                 data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false"
                 aria-label="Toggle navigation" (click)="sidebarToggle()">
